--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "git-blog-collin-test",
-  "version": "0.1.0",
-  "private": true,
+  "name": "collin-blog-with-md",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "^10.2.4",
-    "next": "10.0.6",
+    "classnames": "2.2.6",
+    "date-fns": "2.16.1",
+    "gray-matter": "4.0.2",
+    "next": "latest",
+    "next-themes": "0.0.14",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-syntax-highlighter": "^15.4.3",
+    "remark": "13.0.0",
+    "remark-html": "13.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.1",
     "postcss": "^8.2.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
     "tailwindcss": "^2.0.2"
-  }
+  },
+  "license": "MIT"
 }
