--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "collin-blog-with-md",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
