--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "classnames": "2.2.6",
     "date-fns": "2.16.1",
     "gray-matter": "4.0.2",
+    "gsap": "^3.6.1",
     "next": "latest",
     "next-themes": "0.0.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
     "react-syntax-highlighter": "^15.4.3",
     "remark": "13.0.0",
     "remark-html": "13.0.1"
