--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,108 @@
 {
+    "debug.javascript.automaticallyTunnelRemoteServer": false,
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "liveServer.settings.donotShowInfoMsg": true,
+    "liveServer.settings.donotVerifyTags": true,
+    "editor.formatOnSave": false,
+    "explorer.confirmDelete": false,
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "explorer.confirmDragAndDrop": false,
+    "git.enableSmartCommit": true,
+    "git.autofetch": true,
+    "git.confirmSync": false,
+    "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\cmd.exe",
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true
+    },
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
+    "editor.fontLigatures": true,
+    "workbench.startupEditor": "newUntitledFile",
+    "diffEditor.ignoreTrimWhitespace": false,
+    "editor.fontFamily": "Fira Code Retina",
+    "editor.lineHeight": 18,
+    "emmet.triggerExpansionOnTab": true,
+    "workbench.iconTheme": "vscode-seedling-icon-theme",
+    "terminal.integrated.shell.linux": "/bin/bash",
+    "workbench.sideBar.location": "left",
+    "editor.accessibilitySupport": "off",
+    "[javascriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "debug.console.fontFamily": "Cascadia code, Fira Code, Consolas, JetBrains mono, ",
+    "[vue]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "editor.formatOnPaste": false,
+    
+    "editor.formatOnType": false,
+    "workbench.statusBar.visible": true,
+    "breadcrumbs.enabled": false,
+    "editor.minimap.enabled": false,
+    "editor.renderWhitespace": "none",
+    "editor.renderControlCharacters": false,
+    "workbench.activityBar.visible": false,
+    "editor.smoothScrolling": true,
+    "editor.cursorBlinking": "smooth",
+    "window.menuBarVisibility": "toggle",
+    
+    "peacock.favoriteColors": [
+        {
+            "name": "Angular Red",
+            "value": "#dd0531"
+        },
+        {
+            "name": "Azure Blue",
+            "value": "#007fff"
+        },
+        {
+            "name": "JavaScript Yellow",
+            "value": "#f9e64f"
+        },
+        {
+            "name": "Mandalorian Blue",
+            "value": "#1857a4"
+        },
+        {
+            "name": "Node Green",
+            "value": "#215732"
+        },
+        {
+            "name": "React Blue",
+            "value": "#61dafb"
+        },
+        {
+            "name": "Something Different",
+            "value": "#832561"
+        },
+        {
+            "name": "Svelte Orange",
+            "value": "#ff3d00"
+        },
+        {
+            "name": "Vue Green",
+            "value": "#42b883"
+        },
+        {
+            "name": "GreenieWeenie",
+            "value": "#22b07e"
+        }
+    ],
+    "terminal.integrated.fontSize": 13,
+    "terminal.integrated.fontFamily": "Cascadia Code",
+    "workbench.editorAssociations": [
+        {
+            "viewType": "jupyter.notebook.ipynb",
+            "filenamePattern": "*.ipynb"
+        }
+    ],
+    "editor.fontSize": 13,
+    "terminal.integrated.shellArgs.windows": [],
+    "kite.showWelcomeNotificationOnStartup": false,
+    "workbench.colorTheme": "GitHub Dark",
+    "editor.cursorStyle": "block"
+    
 }
